--- a/css/main3.css
+++ b/css/main3.css
@@ -12,7 +12,6 @@ body {
   background: #f1f1f1;
   padding: 2% 0 3% 0;
   text-align:center;
-
 }
 
 .front {
@@ -22,17 +21,11 @@ body {
   background-size:cover
 }
 
-footer {
-  background: url(../img/restaurante4.jpg);
-  background-repeat: no-repeat; 
-  background-position: center center; 
-  background-size:cover
-}
 .colo{
   border-color: black;
   background-color: black;
 }
-#header, #testimonial, #info-one, #info-two, #contact{
+#header{
   min-height: 120vh;
   width:100%;
 }
@@ -42,9 +35,12 @@ html, body {
 html:focus-within {
   scroll-behavior: smooth;
 }
+
 .navbar-light .navbar-nav .nav-link{
 	color: #000;
 	}
+	
+	
 .navbar-light .navbar-nav .nav-link:hover{
 	color: #f4511e;
 	}
